--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my-whole-site-vault</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <title>EStore - Your Premium Shopping Destination</title>
+    <meta name="description" content="Shop premium electronics, fashion, and lifestyle products at EStore. Unbeatable prices, fast shipping, and excellent customer service." />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="my-whole-site-vault" />
+    <meta property="og:title" content="91bf39ea-804f-44a2-a850-20c4bc5828df" />
     <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
